@@ -47,6 +47,7 @@ targetCompatibility = '17'
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-Xlint:unchecked"   //<< "-Werror"
     options.compilerArgs << "-Xlint:deprecation" //<< "-Werror"
+    options.compilerArgs << "--enable-preview"
 }
 
 tasks.withType(Javadoc) {
@@ -59,7 +60,7 @@ tasks.withType(Javadoc) {
 }
 
 wrapper {
-    gradleVersion '7.5.1'
+    gradleVersion '8.3'
 }
 
 repositories {
@@ -69,6 +70,10 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+
+    // add tinylog for logging
+    implementation 'org.tinylog:tinylog-api:2.6.2'
+    runtimeOnly 'org.tinylog:tinylog-impl:2.6.2'
 }
 
 jar {
@@ -81,6 +86,9 @@ test {
     useJUnitPlatform()
     testLogging.showStandardStreams = true
     testLogging.exceptionFormat     = 'full'
+
+    // jvm-args
+//    jvmArgs '--enable-preview'
 }
 
 
